supabase-kong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-kong
  namespace: supabase
  labels:
    workload: supabase-kong
spec:
  selector:
    matchLabels:
      workload: supabase-kong
  template:
    metadata:
      labels:
        workload: supabase-kong
    spec:
      securityContext: {}
      containers:
      - name: supabase-kong
        securityContext: {}
        resources: {}
        image: "kong:2.8.1"
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args: ["/scripts/wrapper.sh"]
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        volumeMounts:
        - mountPath: /home/kong/template.yml
          name: config
          subPath: template.yml
        - mountPath: /scripts
          name: wrapper
      volumes:
      - name: config
        configMap:
          name: supabase-kong
          defaultMode: 0777
          items:
          - key: template.yml
            path: template.yml
      - name: wrapper
        configMap:
          name: supabase-kong
          defaultMode: 0777
          items:
          - key: wrapper.sh
            path: wrapper.sh
