supabase-kong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-kong
  labels:
    workload: supabase-kong
  namespace: supabase
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    workload: supabase-kong
